--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-sass": "~0.5.0",
-    "grunt-contrib-watch": "~0.5.2",
+    "grunt-contrib-watch": "~0.5.2"
   }
 }
