--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-cssmin": "^0.9.0",
-    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-watch": "~0.6.1",
     "grunt-filerev": "^0.2.1",
     "grunt-newer": "^0.7.0",
-    "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1",
     "grunt-text-replace": "latest",
-    "grunt-contrib-sass": "~0.7.3",
-    "grunt-contrib-watch": "~0.6.1"
+    "load-grunt-tasks": "^0.4.0",
+    "time-grunt": "^0.3.1"
   }
 }
